styling, about.html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
    
     <main>
-    <div id= "main-header">
          <header id="navbar">
 
         </header>
+    <div class="card">
         
-        <div id ="main-blurb">
+        
+        <!-- <div class ="card"> -->
             <h2>Hi, I'm Gia!</h2>
             <h3 style="color: #757575;
             font-size: 1.25rem;
@@ -25,7 +26,7 @@
             <p>I focus on bridging design and development to build meaningful,
             user-centered solutions through design thinking, technical problem-solving, 
             and collaborative iteration.</p>
-        </div>
+        <!-- </div> -->
     </div>
     </main>
    <script src="main.js"></script>
