--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
             >Let’s connect!</p>
             <h2>Contact</h2>
             <p>Contact me via email</p> <a href="mailto:boudreau_gianna@yahoo.com">boudreau_gianna@yahoo.com</a>
+            <p>For more details about my work and experience, please visit my LinkedIn profile.</p>
             <img src="img/Linkedin.png" alt="Linkedin Icon" class="icon">
         <!-- </div> -->
     </div>
