--- a/cv.html
+++ b/cv.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <header id="navbar"></header>
+    <div class="card">
+        <h2>Curriculum Vitae</h2>
+        <a href="gboudreau_may25 - Copy.pdf" target="_blank" rel="noopener noreferrer">Click here to open PDF in a new window.</a>
+        <iframe src="gboudreau_may25 - Copy.pdf" width="100%" height="500px" style="border: none;"></iframe>
     <script src="main.js"></script>
 </body>
 </html>
