--- a/about.html
+++ b/about.html
@@ -28,9 +28,14 @@
             line-height: normal;"
             >Let’s connect!</p>
             <h2>Contact</h2>
-            <p>Contact me via email</p> <a href="mailto:boudreau_gianna@yahoo.com">boudreau_gianna@yahoo.com</a>
+            <p>Contact me via email: 
+                <a href="mailto:boudreau_gianna@yahoo.com">boudreau_gianna@yahoo.com</a>
+            </p> 
             <p>For more details about my work and experience, please visit my LinkedIn profile.</p>
-            <img src="img/Linkedin.png" alt="Linkedin Icon" class="icon">
+            <a href="https://www.linkedin.com/in/gianna-boudreau/" target="_blank" rel="noopener noreferrer">
+        <img src="img/Linkedin.png" alt="LinkedIn Icon" class="icon">
+        </a>
+
         <!-- </div> -->
     </div>
     <script src="main.js"></script>
