add layout for projects

--- a/about.html
+++ b/about.html
@@ -31,9 +31,7 @@
             <p>Contact me via email: 
                 <a href="mailto:boudreau_gianna@yahoo.com">boudreau_gianna@yahoo.com</a>
             </p> 
-            <p>For more details about my work and experience, please visit my LinkedIn profile.</p>
-            <a href="https://www.linkedin.com/in/gianna-boudreau/" target="_blank" rel="noopener noreferrer">
-        <img src="img/Linkedin.png" alt="LinkedIn Icon" class="icon">
+            <p>For more details about my work and experience, please visit my<a href="https://www.linkedin.com/in/gianna-boudreau/" target="_blank" rel="noopener noreferrer"> LinkedIn profile.</p>
         </a>
 
         <!-- </div> -->
