mobile view for projects

--- a/blocproj.html
+++ b/blocproj.html
@@ -16,7 +16,7 @@
         <h1>Capstone Project: bloc <em>Making For Everyone</em></h1>
         <hr>
          <p>September 2024 – May 2025</p>
-         <h3 style="text-align: justify;">Redesigning the CNC experience to lower the barrier to entry for beginners through intuitive interaction, built-in safety, guided onboarding, and creative empowerment.</h3>
+         <h3 style="text-align: left;">Redesigning the CNC experience to lower the barrier to entry for beginners through intuitive interaction, built-in safety, guided onboarding, and creative empowerment.</h3>
         <p>For more details, please visit the <a href="https://blocnc.com/index.html" target="_blank" rel="noopener noreferrer">bloc website</a>.</p>
         <p>See more behind-the-scenes work and moments on our <a href='https://www.instagram.com/blocnc/' target='_blank'>Instagram</a>.</p>
         <hr>
@@ -184,7 +184,7 @@
         <h3>Innovation Guide</h3>
          <a href="innovation_guide.pdf" target="_blank" rel="noopener noreferrer">Click here to open PDF in a new window.</a>
          <p></p>
-         <img src="img/bloc_front.png" alt="innovation guide cover" style="width: 25rem; height: 100%; border: 1 px solid #757575;">
+         <img src="img/bloc_front.png" alt="innovation guide cover" style="width: 25rem; height: 100%; border: 1 px solid #757575;" class="innovation-img">
 
         <!-- <iframe src="innovation_guide.pdf" width="100%" height="500px" style="border: none;"></iframe> -->
         <hr>
