--- a/blocproj.html
+++ b/blocproj.html
@@ -205,8 +205,13 @@
         <p>Thank you for reading about my capstone project! If you have any questions or want to connect, feel free to reach out via <a href="mailto:boudreau_gianna@yahoo.com">boudreau_gianna@yahoo.com</a> or check out my <a href="https://www.linkedin.com/in/gianna-boudreau/" target="_blank" rel="noopener noreferrer">LinkedIn profile</a>.</p>
          <a href="projects.html" class="back-link">
                 <!-- <img src="img/arrow_back.png" alt="Back Arrow" class="back-icon"> -->
-                <em>See More Projects </em>
-            </a>
+                <em>See More Projects </em></a>
+
+        <!-- Lightbox Modal -->
+        <div id="lightbox" class="lightbox">
+        <span class="close">&times;</span>
+        <img class="lightbox-content" id="lightbox-img" alt="Full view">
+        </div>
         <script src="main.js"></script>
 </body>
 </html>
