--- a/blocproj.html
+++ b/blocproj.html
@@ -207,7 +207,7 @@
                 <!-- <img src="img/arrow_back.png" alt="Back Arrow" class="back-icon"> -->
                 <em>See More Projects </em></a>
 
-        <!-- Lightbox Modal -->
+        <!-- Lightbox Model -->
         <div id="lightbox" class="lightbox">
         <span class="close">&times;</span>
         <img class="lightbox-content" id="lightbox-img" alt="Full view">
