updated about page, outline for wnxproj page

--- a/about.html
+++ b/about.html
@@ -14,7 +14,10 @@
         <!-- <div class ="card"> -->
             <h2>About</h2>
            
-           <p>Hi, I’m Gianna Boudreau, but you can call me Gia! I’m a UI/UX designer and front-end developer based in Boulder, Colorado.</p>
+           <p>Hi, I'm Gia! I am based in Frisco, Colorado, but willing to relocate internationally. 
+            Currently, I am a Ski and Ride School Sales Specialist at Copper Mountain Resort looking for freelance design and development projects
+            as well as full-time opporturnities.
+           </p>
            <p
         
             <p>When I’m not immersed in the world of design and coding, you can find me doing the typical Coloradoan activities. 
