--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             font-style: normal;
             font-weight: 300;
             line-height: normal;">UI/UX Designer and Front-end Developer</h3>
-        <p>I am a recent graduate from CU Boulder with a B.S. in Creative Technology and Design,
-            a multidisciplinary program within the College of Engineering and Applied Science, and a minor in Computer Science.</p>
+        <!-- <p>I am a recent graduate from CU Boulder with a B.S. in Creative Technology and Design,
+            a multidisciplinary program within the College of Engineering and Applied Science, and a minor in Computer Science.</p> -->
             <p>I focus on bridging design and development to build meaningful,
             user-centered solutions through design thinking, technical problem-solving, 
             and collaborative iteration.</p>
         <!-- </div> -->
          <p>I’m currently seeking entry-level opportunities in UI/UX design and front-end development where I can continue learning, collaborating, and 
-                solving  problems through human-centered design.</p>
+                solving  problems through human-centered design. </p>
         
     </div>
     </main>
