--- a/wnxproj.html
+++ b/wnxproj.html
@@ -41,7 +41,25 @@
         <p>Blueprint Boulder is a software development club on campus that partners with nonprofits to build meaningful, mission-aligned digital solutions.
             As volunteer designers and developers, we collaborate with community-focused organizations to create software that drives real impact.
         </p>
+        <h3>Client Specifications</h3>
+        <ul>
+            <li><strong>Match Matching Swiping Feature: </strong>An algorithm can group individuals together based on commonalities (e.g., classes, clubs) allowing users to swipe/friend other users for further connections. </li>
+            <li><strong>Messaging: </strong>Users are able to message their connections.</li>
+            <li><strong>Activity Feed: </strong>view connections, recent messages, and groups.</li>
+            <li><strong>Profile Page: </strong>Users can customize their appearance on the app. Additionally the algorithm can use these items to group users together.</li>
+        </ul>
+       
        <hr>
+        <h2>Problem Space</h2>
+        <p></p>
+        <h3>Target Audience</h3>
+        <h3>Common Needs</h3>
+
+        <hr>
+        <h2>Research Methods & Practice</h2>
+        <h3>Summarized Research</h3>
+        <h3>Initial Designs</h3>
+        <h3>Key Interview Insights</h3>
     </div>
 
 
