wnx summarized research and initial designs

--- a/wnxproj.html
+++ b/wnxproj.html
@@ -51,15 +51,47 @@
        
        <hr>
         <h2>Problem Space</h2>
-        <p></p>
+        <p>Female-identifying undergraduate students at CU Boulder need accessible ways to connect with their peers who can share their experiences so they can build a sense of belonging and find support around networking, academics, and personal challenges. </p>
         <h3>Target Audience</h3>
-        <h3>Common Needs</h3>
+            <div class="carousel-container">
+        <button class="carousel-btn left" onclick="prevImage()">&#10094;</button>
+        <div class="img-carousel">
+            <img src="img/101 WN.png" alt="WNX Example User" class="carousel-img active">
+            <img src="img/101 WN (1).png" alt="WNX Example User 02" class="carousel-img">
+        </div>
+        <button class="carousel-btn right" onclick="nextImage()">&#10095;</button>
+        </div>
+    
 
         <hr>
         <h2>Research Methods & Practice</h2>
         <h3>Summarized Research</h3>
-        <h3>Initial Designs</h3>
+        <p>Our team conducted multiple rounds of user interviews with undergraduate female-identifying students at CU Boulder, using think-aloud testing on Figma prototypes. Interviews were split across team members and spanned the full design cycle — from an initial prototype that was handed off at the start of the project, through several iterations of the registration and networking flows. Participants were asked to interact with the prototype as if signing up and using the app for the first time, narrating their thoughts as they went.</p>
+        <p>To keep feedback unbiased, I developed an interview guide with open-ended questions and prompted participants to think aloud as they navigated the prototype naturally. Interviewers were instructed to avoid leading questions and to observe body language and signs of confusion or frustration alongside verbal responses. Participants were asked to interact with the app as if signing up for the first time, and questions were tailored to each section. Registration focused on clarity and ease of setup, while the networking page focused on information layout and intuitiveness.</p>
         <h3>Key Interview Insights</h3>
+        <h4 style="color: #757575">Users needed more context to feel confident completing their profiles.</h4>
+        <p>Several participants were unsure what the app was for, what to put in the bio, and how skills and interests differed from one another. This pointed to a need for clearer onboarding language, placeholder hints, and a brief statement of purpose early in the registration flow.
+        </p>
+        <h4 style="color: #757575">The swipe-based networking mechanic, while familiar, carried emotional weight. </h4>
+        <p>Participants recognized the pattern from apps like Tinder or Hinge, which made it easy to navigate, but one user raised a concern that the reject/accept framing could feel competitive or make users feel insecure if they weren't getting connections. This led us to reconsider the language and interaction design around that mechanic, shifting toward warmer, less binary options.
+        </p>
+        <h4 style="color: #757575">Navigation and information density needed to be rethought.</h4>
+        <p>Users wanted messaging to feel more prominent, search to be integrated rather than on a separate page, and profile cards to reveal more depth on interaction. These findings informed how we structured the core screens in later iterations.
+        </p>
+        <h3>Design Iterations</h3>
+        <p>The design went through several rounds of iteration based on user feedback. The process started with an initial prototype that was handed off at the beginning of the project. After the first round of testing and feedback, early versions of the registration pages were kept intentionally simple, focused on layout and flow without a fully defined color palette to isolate usability issues from visual ones. This allowed us to focus user feedback on the structure and interaction patterns without the noise of unfinished styling.
+        </p>
+             <div class="carousel-container">
+        <button class="carousel-btn left" onclick="prevImage()">&#10094;</button>
+        <div class="img-carousel">
+            <img src="img/initalregwn.png" alt="Initial WNX registration pages" class="carousel-img active">
+            <img src="img/finalregwn.png" alt="Final WNX registration pages" class="carousel-img">
+            <img src="img/networkingwn01.png" alt="Initial WNX networking pages" class="carousel-img">
+            <img src="img/networkingwn02.png" alt="Final WNX networking pages" class="carousel-img">
+        </div>
+        <button class="carousel-btn right" onclick="nextImage()">&#10095;</button>
+        </div>
+        <p>After testing and incorporating that structural feedback, we layered in the client's branding and color palette. This surfaced a recurring tension: users consistently reacted negatively to the color scheme the client had specified, which became one of the more interesting challenges to navigate, balancing user preferences against client direction. This kind of stakeholder constraint is a normal part of the design process, and working through it required ongoing communication about where user feedback could inform decisions and where client requirements took precedence.</p>
     </div>
 
 
