added screenshots, trying to fix video

--- a/wnxproj.html
+++ b/wnxproj.html
@@ -92,6 +92,27 @@
         <button class="carousel-btn right" onclick="nextImage()">&#10095;</button>
         </div>
         <p>After testing and incorporating that structural feedback, we layered in the client's branding and color palette. This surfaced a recurring tension: users consistently reacted negatively to the color scheme the client had specified, which became one of the more interesting challenges to navigate, balancing user preferences against client direction. This kind of stakeholder constraint is a normal part of the design process, and working through it required ongoing communication about where user feedback could inform decisions and where client requirements took precedence.</p>
+
+        <hr>
+        <h2>Implementation & Handoff</h2>
+        <p>Following the design iterations, we translated the registration flow into a working mobile application using React Native and Gluestack UI for the component library. The app was developed and tested using Expo Go, which allowed us to run the live application on our phones by scanning a QR code, giving us immediate feedback on how the interface actually felt to use on a mobile device rather than relying on desktop emulators.
+        </p>
+        <p>We successfully built out the full registration flow, integrating frontend logic with backend API endpoints to handle user account creation and profile setup. This included form validation, error handling, and state management across the multi-step registration process.
+        </p>
+        <p>The project was handed off to the client after the registration pages were completed, at which point the client relocated to pursue graduate studies elsewhere and transitioned the project to other developers for continued work on the networking and messaging features</p>
+       <div class="carousel-container">
+    <button class="carousel-btn left" onclick="prevImage()">&#10094;</button>
+    <div class="img-carousel">
+        <img src="img/impscreenshots.png" alt="Implementation screenshots from ExpoGO" class="carousel-img active">
+        <video class="carousel-img" controls>
+            <source src="img/wnx_expo_vid.MP4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <button class="carousel-btn right" onclick="nextImage()">&#10095;</button>
+</div>
+        
+
     </div>
 
 
