--- a/wnxproj.html
+++ b/wnxproj.html
@@ -111,7 +111,13 @@
     </div>
     <button class="carousel-btn right" onclick="nextImage()">&#10095;</button>
 </div>
-        
+         <hr>
+        <h2>Contact</h2>
+        <p>Thank you for reading about my capstone project! If you have any questions or want to connect, feel free to reach out via <a href="mailto:boudreau_gianna@yahoo.com">boudreau_gianna@yahoo.com</a> or check out my <a href="https://www.linkedin.com/in/gianna-boudreau/" target="_blank" rel="noopener noreferrer">LinkedIn profile</a>.</p>
+         <a href="projects.html" class="back-link">
+                <!-- <img src="img/arrow_back.png" alt="Back Arrow" class="back-icon"> -->
+                <em>See More Projects </em></a>
+
 
     </div>
 
