add gif for wnx, adjusting some styling to rem

--- a/wnxproj.html
+++ b/wnxproj.html
@@ -104,16 +104,13 @@
     <button class="carousel-btn left" onclick="prevImage()">&#10094;</button>
     <div class="img-carousel">
         <img src="img/impscreenshots.png" alt="Implementation screenshots from ExpoGO" class="carousel-img active">
-        <video class="carousel-img" controls>
-            <source src="img/wnx_expo_vid.MP4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <img style="width:fit-content; margin: auto;" src="img/wnx_demo.gif" alt = "Implementation demo from ExpoGO" id="gif"class = "carousel-img active" >
     </div>
     <button class="carousel-btn right" onclick="nextImage()">&#10095;</button>
 </div>
          <hr>
         <h2>Contact</h2>
-        <p>Thank you for reading about my capstone project! If you have any questions or want to connect, feel free to reach out via <a href="mailto:boudreau_gianna@yahoo.com">boudreau_gianna@yahoo.com</a> or check out my <a href="https://www.linkedin.com/in/gianna-boudreau/" target="_blank" rel="noopener noreferrer">LinkedIn profile</a>.</p>
+        <p>Thank you for reading about my project! If you have any questions or want to connect, feel free to reach out via <a href="mailto:boudreau_gianna@yahoo.com">boudreau_gianna@yahoo.com</a> or check out my <a href="https://www.linkedin.com/in/gianna-boudreau/" target="_blank" rel="noopener noreferrer">LinkedIn profile</a>.</p>
          <a href="projects.html" class="back-link">
                 <!-- <img src="img/arrow_back.png" alt="Back Arrow" class="back-icon"> -->
                 <em>See More Projects </em></a>
